client info mapper